added row updating, if it already exists, fixed handlers, added swagger
