# internal/server/server.go
@@ -9,6 +9,10 @@ import (
 	"github.com/go-chi/chi/v5"
 	"github.com/jomei/notionapi"
 	"github.com/spf13/viper"
+
+	_ "github.com/Corray333/notion-manager/docs" // Import the generated docs package
+
+	httpSwagger "github.com/swaggo/http-swagger"
 )
 
 type App struct {
@@ -25,7 +29,10 @@ func (a *App) Run() {
 
 	router.Post("/projects", handlers.NewProject(store))
 	router.Patch("/sync", handlers.UpdateDatabases(store))
-	router.Get("/need-fix", handlers.GetToBeUpdated(store))
+	router.Get("/fix", handlers.GetToBeUpdated(store))
+
+	// Swagger
+	router.Get("/swagger/*", httpSwagger.WrapHandler)
 
 	slog.Info("Starting server on port " + viper.GetString("PORT"))
 	if err := http.ListenAndServe(viper.GetString("PORT"), router); err != nil {
